[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytenable-was"
version = "0.1.0"
description = "SDK + CLI for Tenable Web Application Scanning (WAS) v2"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Mark Teicher", email = "no-email@example.com" }
]
requires-python = ">=3.8"

dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "tqdm>=4.0.0",
]

[project.scripts]
pytenable-was = "pytenable_was.cli:cli"

[project.urls]
Homepage = "https://github.com/markteicher/pytenable-was"
Repository = "https://github.com/markteicher/pytenable-was"
Issues = "https://github.com/markteicher/pytenable-was/issues"

# -------------------------------------------------------------------
# Pytest + Coverage configuration
# -------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "--cov=pytenable_was --cov-report=term --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pytenable_was"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 60

[tool.coverage.html]
directory = "htmlcov"
