[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytenable-was"
version = "1.0.0"
description = "SDK + CLI for Tenable Web Application Scanning (WAS) v2 API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Mark Teicher" }
]

keywords = ["tenable", "was", "web application scanning", "security", "sdk", "cli"]

dependencies = [
    "requests>=2.28.0",
    "click>=8.1.0",
    "tqdm>=4.66.0"
]

[project.urls]
Homepage = "https://github.com/markteicher/pytenable-was"
Source = "https://github.com/markteicher/pytenable-was"
Issues = "https://github.com/markteicher/pytenable-was/issues"

[project.scripts]
pytenable-was = "pytenable_was.cli:cli"

[tool.setuptools]
packages = ["pytenable_was"]

[tool.setuptools.package-data]
pytenable_was = ["*.md", "*.txt"]

# ------------------------------
# Developer / Testing Extras
# ------------------------------

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
    "black>=23.0.0"
]

# ------------------------------
# Ruff / Black Config (Optional)
# ------------------------------
[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "B"]
ignore = ["E501"]
