[metadata]
name = tenable-was-sdk
version = 1.0.0
description = SDK + CLI for Tenable Web Application Scanning (WAS) v2
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Your Name
url = https://github.com/your-org/tenable-was-sdk

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0
    pydantic>=2.0.0

[options.entry_points]
console_scripts =
    tenable-was = pytenable_was.cli:main
