[metadata]
name = pytenable-was
version = 1.0.0
description = SDK + CLI for Tenable Web Application Scanning (WAS) v2
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Mark Teicher
url = https://github.com/markteicher/pytenable-was

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0
    click>=8.0
    tqdm>=4.65

[options.entry_points]
console_scripts =
    pytenable-was = pytenable_was.cli:cli
