[metadata]
name = pytenable-was
version = 0.1.0
description = SDK + CLI for Tenable Web Application Scanning (WAS) v2
long_description = file: README.md
long_description_content_type = text/markdown
author = Mark Teicher
license = MIT
license_files = LICENSE
url = https://github.com/markteicher/pytenable-was
project_urls =
    Homepage = https://github.com/markteicher/pytenable-was
    Source = https://github.com/markteicher/pytenable-was
    Issues = https://github.com/markteicher/pytenable-was/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0
    click>=8.0.0
    tqdm>=4.0.0

[options.entry_points]
console_scripts =
    pytenable-was = pytenable_was.cli:cli
